# Ayanami

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: CMakeLists.txt  FTX_MarketMaker.cpp  ftx_mm.cpp  ws_test.cpp
include/: AV_State.hpp  AvellanedaStoikov.hpp  BybitWS.hpp  BybitWSHandler.hpp  BybitWSSession.hpp  BybitWebsocket.hpp  CBProWebsocket.hpp  CoinbaseProExchange.hpp  CoinbaseWebsocket.hpp  Encryption.hpp  Exchange.hpp  HttpClient.hpp  Https.hpp  LimitOrderBook.hpp  MessageParsing.hpp  PriceSeries.hpp  Socket.hpp  TimeSeries.hpp  Trade.hpp  TradeSeries.hpp  Websocket.hpp  WebsocketHandler.hpp  WebsocketMessageHandler.hpp  av_coro.hpp  avellaneda_stoikov.hpp  encryption.hpp  https.hpp  json.hpp  limit_order_book.hpp  message_bus.hpp  messages.hpp  msg_base.hpp  order_machine.hpp  price_series.hpp  trade_series.hpp
include/ftx/: FTX_APIRequest.hpp  FTX_APIRequests.hpp  FTX_LimitOrderBook.hpp  FTX_OrderBookMsgs.hpp  FTX_WSMessage.hpp  ftx_api.hpp  ftx_msg.hpp  ftx_rest.hpp  ftx_websocket.hpp
src/: AvellanedaStoikov.cpp  BybitWS.cpp  BybitWSHandler.cpp  BybitWSSession.cpp  BybitWebsocket.cpp  CBProWebsocket.cpp  CoinbaseProExchange.cpp  CoinbaseWebsocket.cpp  Encryption.cpp  Exchange.cpp  HttpClient.cpp  Https.cpp  LimitOrderBook.cpp  MessageParsing.cpp  PriceSeries.cpp  Socket.cpp  TimeSeries.cpp  Trade.cpp  TradeSeries.cpp  Websocket.cpp  avellaneda_stoikov.cpp  encryption.cpp  https.cpp  json.cpp  limit_order_book.cpp  message_bus.cpp  messages.cpp  price_series.cpp  trade_series.cpp
src/ftx/: FTX_APIRequest.cpp  FTX_APIRequests.cpp  FTX_LimitOrderBook.cpp  FTX_OrderBookMsgs.cpp  FTX_WSMessage.cpp  FTX_Websocket.cpp  ftx_api.cpp  ftx_rest.cpp  ftx_websocket.cpp  ftx_ws.cpp
strategies/: AvellanedaStoikov.cpp  CMakeLists.txt  Classic.cpp  FTX_MarketMaker.cpp  First.cpp  MarketMaker.cpp
strategy/: CMakeLists.txt  backtest.json  collect_data.cpp  ftx_mm.cpp
test/: AvellanedaStoikovTests.cpp  BybitWSHandlerTests.cpp  BybitWebsocketTests.cpp  CBProWebsocketTests.cpp  CMakeLists.txt  CoinbaseProExchangeTests.cpp  CoinbaseWebsocketTests.cpp  EncryptionTests.cpp  ExchangeTests.cpp  HttpClientTests.cpp  HttpsTests.cpp  LimitOrderBookTests.cpp  MessageParsingTests.cpp  PriceSeriesTests.cpp  SocketTests.cpp  Test2.cpp  TimeSeriesTests.cpp  TradeSeriesTests.cpp  TradeTest.cpp  TradeTests.cpp  WebsocketTests.cpp  av_coro_tests.cpp  avellaneda_stoikov_tests.cpp  encryption_tests.cpp  json_tests.cpp  limit_order_book_tests.cpp  message_bus_tests.cpp  messages_tests.cpp  order_machine_tests.cpp  price_series_tests.cpp  trade_series_tests.cpp
test/ftx/: FTX_APIRequestTests.cpp  FTX_APIRequestsTests.cpp  FTX_HttpsTests.cpp  FTX_LimitOrderBookTests.cpp  FTX_OrderBookMsgsTests.cpp  FTX_WSMessageTests.cpp  FTX_WebsocketTests.cpp  ftx_api_tests.cpp  ftx_rest_tests.cpp  ftx_websocket_tests.cpp  ftx_ws_tests.cpp
test/json_test_cases/: ftx_error.json  ftx_orderbook_snapshot.json  ftx_orderbook_update.json  ftx_orders.json  ftx_subscribed.json  ftx_trades.json
